--- a/Milestone_3/Module_14.5/index.html
+++ b/Milestone_3/Module_14.5/index.html
@@ -25,12 +25,108 @@
                         <span class="">Infinity Run 2</span>
                     </h1>
                     <p class="w-75">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <button class="rounded bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
                 </div>
             </div>
         </section>
     </header>
     <!-- Header End -->
+
+    <!-- Main Start -->
+    <main class="container">
+        <!-- Casual Shoes -->
+        <section class="py-5">
+          <h2 class="mb-5 text-uppercase fw-bold">Casual Shoes</h2>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+              <div class="col">
+                <div class="card h-100 border-0 rounded-3 shadow-lg">
+                  <img class="bg-secondary rounded-3 m-3" src="images/shoe_1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Nike Shoe</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="card-footer mb-3 d-flex justify-content-between border-0">
+                    <h1 class="text-warning">$234</h1>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 border-0 rounded-3 shadow-lg">
+                  <img class="bg-secondary rounded-3 m-3" src="images/shoe_2.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Sneakers Skate Shoe</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="card-footer mb-3 d-flex justify-content-between border-0">
+                    <h1 class="text-warning">$234</h1>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 border-0 rounded-3 shadow-lg">
+                  <img class="bg-secondary rounded-3 m-3" src="images/shoe_3.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Sneakers Basketball shoe</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="card-footer mb-3 d-flex justify-content-between border-0">
+                    <h1 class="text-warning">$234</h1>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
+        <!-- Formal Shoes -->
+        <section class="py-5">
+          <h2 class="mb-5 text-uppercase fw-bold">Formal Shoes</h2>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+              <div class="col">
+                <div class="card h-100 border-0 rounded-3 shadow-lg">
+                  <img class="rounded-3 m-3" src="images/shoe_4.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Nike Shoe</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="card-footer mb-3 d-flex justify-content-between border-0">
+                    <h1 class="text-warning">$234</h1>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 border-0 rounded-3 shadow-lg">
+                  <img class="rounded-3 m-3" src="images/shoe_5.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Sneakers Skate Shoe</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="card-footer mb-3 d-flex justify-content-between border-0">
+                    <h1 class="text-warning">$234</h1>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 border-0 rounded-3 shadow-lg">
+                  <img class="rounded-3 m-3" src="images/shoe_6.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Sneakers Basketball shoe</h5>
+                    <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                  </div>
+                  <div class="card-footer mb-3 d-flex justify-content-between border-0">
+                    <h1 class="text-warning">$234</h1>
+                    <button class="text-uppercase fw-bold rounded-3 bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
+        
+    </main>
+    <!-- Main End -->
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
