--- a/Milestone_3/Module_14.5/index.html
+++ b/Milestone_3/Module_14.5/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Font Awesome CSS -->
     <script src="https://kit.fontawesome.com/ab4a239ae2.js" crossorigin="anonymous"></script>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header Start -->
@@ -123,6 +125,37 @@
                 </div>
               </div>
             </div>
+        </section>
+        <!-- Feature Section -->
+        <section class="containe py-5">
+          <div class="row d-flex justify-content-between align-items-center">
+            <div class="col-lg-6 col-md-12">
+              <div class="d-flex justify-content-between align-items-center">
+                <img class="w-25" src="icons/image 12.png" alt="">
+                <div class="">
+                    <h5 class="">Find the Perfect Fit</h5>
+                    <p class="">Everybody is different, which is why we offer styles for every body.</p>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between align-items-center">
+                <img class="w-25" src="icons/image 12.png" alt="">
+                <div class="">
+                    <h5 class="">Find the Perfect Fit</h5>
+                    <p class="">Everybody is different, which is why we offer styles for every body.</p>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between align-items-center">
+                <img class="w-25" src="icons/image 12.png" alt="">
+                <div class="">
+                    <h5 class="">Find the Perfect Fit</h5>
+                    <p class="">Everybody is different, which is why we offer styles for every body.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <img class="w-100" src="icons/XMLID 1.png" alt="">
+            </div>
+          </div>
         </section>
         
     </main>
