--- a/Milestone_3/Module_15.5/01_About Module 15.5.html
+++ b/Milestone_3/Module_15.5/01_About Module 15.5.html
@@ -42,6 +42,13 @@
             <li>Ready for JS</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.Special Video
+        </h2>
+        <ul>
+            <li>About our prograss</li>
+        </ul>
+    </div>
 
 </body>
 </html>
