--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -14,6 +14,13 @@
             <li>How to run JS</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.What is variable, five things you need to declare a variable
+        </h2>
+        <ul>
+            <li>how to declare variable</li>
+        </ul>
+    </div>
 
 </body>
 </html>
