--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -42,6 +42,13 @@
             <li>How to mathmatical operation in js</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.(advanced) Mathematical operation shorthand
+        </h2>
+        <ul>
+            <li>how to change previous variable value</li>
+        </ul>
+    </div>
 
 </body>
 </html>
