--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -49,6 +49,13 @@
             <li>how to change previous variable value</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>07.advanced) Integer float parseInt parseFloat type conversion
+        </h2>
+        <ul>
+            <li>convert srting to number</li>
+        </ul>
+    </div>
 
 </body>
 </html>
