--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -14,6 +14,13 @@
             <li>Recape module 16</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Declare Array, array length and array index
+        </h2>
+        <ul>
+            <li>Array declare and length</li>
+        </ul>
+    </div>
 
 </body>
 </html>
