--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -28,6 +28,13 @@
             <li>Array index and set value by index</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>04.Add or remove element from array using push, pop
+        </h2>
+        <ul>
+            <li>Element add or remove in array by push/pop and unshift/shift</li>
+        </ul>
+    </div>
 
 </body>
 </html>
