--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -35,6 +35,13 @@
             <li>Element add or remove in array by push/pop and unshift/shift</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Compare variables and Comparison operator
+        </h2>
+        <ul>
+            <li>comparison between two value</li>
+        </ul>
+    </div>
 
 </body>
 </html>
