--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -43,10 +43,17 @@
         </ul>
     </div>
     <div class="video">
-        <h2>06 Make conditional decision, if-else, comparison
+        <h2>06.Make conditional decision, if-else, comparison
         </h2>
         <ul>
             <li>if else condition</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>07.Handle multiple conditions, and or
+        </h2>
+        <ul>
+            <li>Multiple conditions check</li>
         </ul>
     </div>
 
