--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -63,6 +63,13 @@
             <li>Nested condition check</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>09.Module summary and two more comparisons
+        </h2>
+        <ul>
+            <li>Module summary and more two comparison operator</li>
+        </ul>
+    </div>
 
 </body>
 </html>
