--- a/Milestone_4/Module_17.5/01_About Module 17.5.html
+++ b/Milestone_4/Module_17.5/01_About Module 17.5.html
@@ -14,6 +14,13 @@
             <li>Recape variable, array and condition</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.While loop, debug and understand while loop
+        </h2>
+        <ul>
+            <li>about whhile loop</li>
+        </ul>
+    </div>
 
 </body>
 </html>
