--- a/Milestone_4/Module_17.5/01_About Module 17.5.html
+++ b/Milestone_4/Module_17.5/01_About Module 17.5.html
@@ -21,6 +21,13 @@
             <li>about whhile loop</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.More while loops, odd numbers, even numbers
+        </h2>
+        <ul>
+            <li>even and odd number</li>
+        </ul>
+    </div>
 
 </body>
 </html>
