--- a/Milestone_4/Module_18/01_About Module 18.html
+++ b/Milestone_4/Module_18/01_About Module 18.html
@@ -56,6 +56,13 @@
             <li>How to write switch case</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>08.(advanced) while and for loop break and continue
+        </h2>
+        <ul>
+            <li>break and continue in loop</li>
+        </ul>
+    </div>
 
 </body>
 </html>
