--- a/Milestone_4/Module_18/01_About Module 18.html
+++ b/Milestone_4/Module_18/01_About Module 18.html
@@ -63,6 +63,13 @@
             <li>break and continue in loop</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>09.Module summary and JS recap
+        </h2>
+        <ul>
+            <li>About summay and recape</li>
+        </ul>
+    </div>
 
 </body>
 </html>
