--- a/Milestone_4/Module_19/01_About Module 19.html
+++ b/Milestone_4/Module_19/01_About Module 19.html
@@ -35,6 +35,13 @@
             <li>Leep Year check</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Calculate Factorial of a number using for loop
+        </h2>
+        <ul>
+            <li>Calculate Factorial</li>
+        </ul>
+    </div>
 
 </body>
 </html>
