--- a/Milestone_4/Module_19/01_About Module 19.html
+++ b/Milestone_4/Module_19/01_About Module 19.html
@@ -42,6 +42,13 @@
             <li>Calculate Factorial</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.Recalculate factorial multiple times using a function
+        </h2>
+        <ul>
+            <li>Calculate Factorial by function6</li>
+        </ul>
+    </div>
 
 </body>
 </html>
