--- a/Milestone_4/Module_19/01_About Module 19.html
+++ b/Milestone_4/Module_19/01_About Module 19.html
@@ -46,7 +46,14 @@
         <h2>06.Recalculate factorial multiple times using a function
         </h2>
         <ul>
-            <li>Calculate Factorial by function6</li>
+            <li>Calculate Factorial by function</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>07.Factorial using a while loop or a decrementing loop
+        </h2>
+        <ul>
+            <li>Calculate Factorial by while loop</li>
         </ul>
     </div>
 
