--- a/Milestone_4/Module_20/01_About Module 20.html
+++ b/Milestone_4/Module_20/01_About Module 20.html
@@ -46,7 +46,14 @@
         <h2>06.Create a Fibonacci Series using a for loop       
         </h2>
         <ul>
-            <li>fibonacci series</li>
+            <li>Fibonacci series</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>07.Handle unexpected input using simple return       
+        </h2>
+        <ul>
+            <li>Input handle</li>
         </ul>
     </div>
 
