--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -14,6 +14,13 @@
             <li>Recape Module</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Remove duplicate items from an array
+        </h2>
+        <ul>
+            <li>Remove duplicate value</li>
+        </ul>
+    </div>
 
 </body>
 </html>
