--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -21,6 +21,13 @@
             <li>Remove duplicate value</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.Explore string nature and reverse a string
+        </h2>
+        <ul>
+            <li>string reversing</li>
+        </ul>
+    </div>
 
 </body>
 </html>
