--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -28,6 +28,13 @@
             <li>string reversing</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>04.Handle unexpected function input parameter error
+        </h2>
+        <ul>
+            <li>Input error fix</li>
+        </ul>
+    </div>
 
 </body>
 </html>
