--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -42,6 +42,13 @@
             <li>Add and Multiply</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.(optional)Write foo, bar, foobar if divisible by 3 or 5 or both
+        </h2>
+        <ul>
+            <li>Divisible</li>
+        </ul>
+    </div>
 
 </body>
 </html>
