--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -49,6 +49,13 @@
             <li>Divisible</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>07.Find the cheapest phone from an array of phone objectsboth
+        </h2>
+        <ul>
+            <li>Find cheapest phone21</li>
+        </ul>
+    </div>
 
 </body>
 </html>
