--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -56,6 +56,13 @@
             <li>Find cheapest phone21</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>08.Calculate the total cost of the products in a shopping cart
+        </h2>
+        <ul>
+            <li>Calculation product price with Quantity</li>
+        </ul>
+    </div>
 
 </body>
 </html>
