--- a/Milestone_4/Module_21.5/01_About Module 21.5.html
+++ b/Milestone_4/Module_21.5/01_About Module 21.5.html
@@ -14,6 +14,13 @@
             <li>Basic Javascript practice</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Simple Problem solving checklist and practicee
+        </h2>
+        <ul>
+            <li>Problem solving</li>
+        </ul>
+    </div>
 
 </body>
 </html>
