--- a/Milestone_4/Module_22.5/01_About Module 22.html
+++ b/Milestone_4/Module_22.5/01_About Module 22.html
@@ -35,6 +35,13 @@
             <li>Find product</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Explore break and continue for selecting some products
+        </h2>
+        <ul>
+            <li>Break and Continue</li>
+        </ul>
+    </div>
 
 </body>
 </html>
