--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -28,6 +28,13 @@
             <li>What is DOM</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Get different HTML elements in JS by using tag name
+        </h2>
+        <ul>
+            <li>Get HTML elements</li>
+        </ul>
+    </div>
 
 </body>
 </html>
