--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -42,6 +42,13 @@
             <li>Get HTML elements by ID</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Explore getElementsByClassName and querySelectorAll
+        </h2>
+        <ul>
+            <li>Get HTML elements by classname and querySelector</li>
+        </ul>
+    </div>
 
 </body>
 </html>
