--- a/Milestone_5/Module_24/01_About Module 24.html
+++ b/Milestone_5/Module_24/01_About Module 24.html
@@ -14,6 +14,13 @@
             <li>DOM event onClick add</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Add onclick handler directly or via javascript
+        </h2>
+        <ul>
+            <li>Onclick add directly or external</li>
+        </ul>
+    </div>
 
 </body>
 </html>
