--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -56,6 +56,13 @@
             <li>Explains Unique name</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Simple Introduction to Regular expression
+        </h2>
+        <ul>
+            <li>Explains Regular expression</li>
+        </ul>
+    </div>
 
 </body>
 </html>
