--- a/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
+++ b/Milestone_7 - Browser & Debug/Module_40 - Devtool and Debug/01_About Module 40.html
@@ -63,6 +63,13 @@
             <li>Explains Regular expression</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary
+        </h2>
+        <ul>
+            <li>Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
