--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -14,6 +14,13 @@
             <li>Setup Typescript</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create output and connect html file for typescript
+        </h2>
+        <ul>
+            <li>Create and use typescript</li>
+        </ul>
+    </div>
 
 </body>
 </html>
