--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -28,6 +28,13 @@
             <li>Basic typescript</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Set function parameter type and function return type
+        </h2>
+        <ul>
+            <li>Set function parameter type</li>
+        </ul>
+    </div>
 
 </body>
 </html>
