--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -42,6 +42,13 @@
             <li>Apply types for array</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Object types, type and arrow function type
+        </h2>
+        <ul>
+            <li>Object and arrow function types</li>
+        </ul>
+    </div>
 
 </body>
 </html>
