--- a/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
+++ b/Milestone_7 - Browser & Debug/Module_40.5 - Practice day copy/01_About Module 41.html
@@ -63,6 +63,13 @@
             <li>Class and private field, JS compile</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary, How much typescript you should know
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
