--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -14,6 +14,13 @@
             <li>Six JavaScript Fundamentals</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Template String, Arrow Function, Spread Operator
+        </h2>
+        <ul>
+            <li>ES6 examples</li>
+        </ul>
+    </div>
 
 </body>
 </html>
