--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -28,6 +28,13 @@
             <li>Array Method</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Array And Object Destructuring, Optional Chaining
+        </h2>
+        <ul>
+            <li>Array And Object Destructuring</li>
+        </ul>
+    </div>
 
 </body>
 </html>
