--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -42,6 +42,13 @@
             <li>Json, Fetch Array Add Or Remove Using Dots</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(Advanced) Truthy, False Ternary Operator, Shortcut And Or
+        </h2>
+        <ul>
+            <li>Js Shortcut</li>
+        </ul>
+    </div>
 
 </body>
 </html>
