--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -49,6 +49,13 @@
             <li>Js Shortcut</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Explore Localstorage And Session Storage With Json
+        </h2>
+        <ul>
+            <li>Localstorage And Session Storage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
