--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -56,6 +56,13 @@
             <li>Localstorage And Session Storage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Module Summary and Revision Task
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
