--- a/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
+++ b/Milestone_7 - Browser & Debug/Module_42 - JS react/01_About Module 42.html
@@ -63,6 +63,13 @@
             <li>Module Summary</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.(Optional) React Js Installation Trouble Shooting
+        </h2>
+        <ul>
+            <li>React Trouble Shooting</li>
+        </ul>
+    </div>
 
 </body>
 </html>
