--- a/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
+++ b/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
@@ -21,6 +21,13 @@
             <li>Try to find the problem</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Use Console log to debug and fix the slider
+        </h2>
+        <ul>
+            <li>Fix the problem</li>
+        </ul>
+    </div>
 
 </body>
 </html>
