--- a/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
+++ b/Milestone_7 - Browser & Debug/Module_43.5 - Browser debug/01_About Module 43.html
@@ -28,6 +28,13 @@
             <li>Fix the problem</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Implement Search Box click on keyboard enter with debug
+        </h2>
+        <ul>
+            <li>Find the problem</li>
+        </ul>
+    </div>
 
 </body>
 </html>
