--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -21,6 +21,13 @@
             <li>Discuss component</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Template, dynamically create HTML elements based on data
+        </h2>
+        <ul>
+            <li>Create HTML element</li>
+        </ul>
+    </div>
 
 </body>
 </html>
