--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -28,6 +28,13 @@
             <li>Create HTML element</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Single Page Application (SPA), Performance benefit
+        </h2>
+        <ul>
+            <li>Discuss SPA benifit</li>
+        </ul>
+    </div>
 
 </body>
 </html>
